--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "framer-motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
